<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.shows.showdetails.ShowDetailsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="?attr/colorPrimaryDark"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:statusBarScrim="@android:color/transparent">

                <ImageView
                    android:id="@+id/imgBackdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <TextView
                    android:id="@+id/txtDetailGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/shape_black_transparent"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:maxLines="1"
                    android:paddingTop="100dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"
                    tools:text="Genre" />

                <Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/showDetailToolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:alpha="0.4"
                        android:src="@drawable/ic_back" />

                </Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/aboutSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="12dp"
                    android:orientation="vertical"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/release_info"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtNetwork"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/network" />

                    <TextView
                        android:id="@+id/txtRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/runtime" />

                    <TextView
                        android:id="@+id/txtFirstAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/first_air" />

                    <TextView
                        android:id="@+id/txtLastAir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/last_air" />

                    <TextView
                        android:id="@+id/txtSeasonCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/season_count" />

                    <TextView
                        android:id="@+id/txtLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/languages" />

                    <TextView
                        android:id="@+id/txtCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/countries" />

                    <TextView
                        android:id="@+id/txtHomepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="4dp"
                        android:autoLink="web"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingBottom="8dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/txtCountry"
                        tools:text="@string/homepg"
                        tools:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/overviewSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutSection">

                    <TextView
                        android:id="@+id/txtDetailOverviewTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/overview"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDetailOverview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="4dp"
                        android:lineSpacingExtra="8dp"
                        android:padding="4dp"
                        android:paddingBottom="8dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        tools:text="@string/junkText" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/castSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overviewSection">

                    <TextView
                        android:id="@+id/txtCastTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/cast"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="3"
                        tools:listitem="@layout/item_cast" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/seasonSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/castSection">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/seasons"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSeasons"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_season_list" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/creatorSection"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="12dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/seasonSection">

                    <TextView
                        android:id="@+id/txtCreatorSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/creator"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCreator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="?attr/colorOnPrimary"
                        android:textSize="14sp"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCreator"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_season_list" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loadingPage"
            layout="@layout/item_loading_page" />

        <include
            android:id="@+id/networkErrorPage"
            layout="@layout/item_network_state" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
