<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.celebrity.CelebrityBiographyFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/txtBioSection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:backgroundTint="?attr/colorPrimaryDark"
                android:orientation="vertical"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/biography"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:lineSpacingExtra="8dp"
                    android:minHeight="200dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"
                    tools:text="@string/junkText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/imageSection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="?attr/colorPrimary"
                android:orientation="vertical"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtBioSection">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/image"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/txtImageSection"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_cast" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homePageSection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:visibility="gone"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageSection"
                tools:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/homepage"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtHomepage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="8dp"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="14sp"
                    tools:text="@string/homepage" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/socialSection"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="horizontal"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homePageSection">

                <ImageView
                    android:id="@+id/imgImdb"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/imdb_logo" />

                <ImageView
                    android:id="@+id/imgFacebook"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/facebook_logo" />

                <ImageView
                    android:id="@+id/imgInstagram"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/instagram_logo" />

                <ImageView
                    android:id="@+id/imgTwitter"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/twitter_logo" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>